# MessageBus

./: .gitignore  CMakeLists.txt  Common.cmake  LICENSE  README.md  version.cmake  version.h
.kdev4/: .gitignore
src/: CMakeLists.txt  LocalSocket  MessageBusInterface  eventloop.cpp  eventloop.h  global.h  localserver.cpp  localserver.h  localsocket.cpp  localsocket.h  localsocketprivate.cpp  localsocketprivate.h  localsocketprivate_thread.h  localsocketprivate_unix.cpp  localsocketprivate_unix.h  localsocketprivate_unix_worker.cpp  localsocketprivate_unix_worker.h  messagebus.cpp  messagebus.h  messagebus_p.cpp  messagebus_p.h  messagebusinterface.cpp  messagebusinterface.h  messagebusinterface_p.h  pointer.h  tools.cpp  tools.h  tsdataqueue.h  tsqueue.h  variant.cpp  variant.h
src/implementations/: localsocketprivate_unix.cpp  localsocketprivate_unix.h
src/unittests/: CMakeLists.txt  gdb_config  logger.cpp  logger.h  pointerclass.cpp  pointerclass.h  testlocalsocket.cpp  testlocalsocket.h  testlocalsocket_external_peer.cpp  testlocalsocket_external_peer_object.cpp  testlocalsocket_external_peer_object.h  testlocalsocket_peer.cpp  testlocalsocket_peer.h  testmessagebus.cpp  testmessagebus.h  testmessagebus_peer.cpp  testmessagebus_peer.h  testpointer.cpp  testpointer.h  testqueue.cpp  testqueue.h  testqueue_dequeuerunnable.h  testqueue_enqueuerunnable.h  testvariant.cpp  testvariant.h
src/unittests/localsocket/: CMakeLists.txt  testlocalsocket.cpp  testlocalsocket.h  testlocalsocket_external_peer.cpp  testlocalsocket_external_peer_object.cpp  testlocalsocket_external_peer_object.h  testlocalsocket_peer.cpp  testlocalsocket_peer.h  testlocalsocketpeerthread.cpp  testlocalsocketpeerthread.h
src/unittests/messagebus/: CMakeLists.txt  testmessagebus.cpp  testmessagebus.h  testmessagebus_peer.cpp  testmessagebus_peer.h
