PROJECT("MessageBus")

include(Common.cmake)

cmake_minimum_required(VERSION 2.6)

#SET(CPACK_PACKAGE_DESCRIPTION_SUMMARY "")
SET(CPACK_PACKAGE_VENDOR "BSS")
#SET(CPACK_PACKAGE_DESCRIPTION_FILE "${PROJECT_DEV_DIR}/Readme.txt")
#SET(CPACK_RESOURCE_FILE_LICENSE "${PROJECT_DEV_DIR}/Copyright.txt")
SET(CPACK_PACKAGE_VERSION "${VERSION}")
SET(CPACK_PACKAGE_VERSION_MAJOR "${VERSION_MAJOR}")
SET(CPACK_PACKAGE_VERSION_MINOR "${VERSION_MINOR}")
SET(CPACK_PACKAGE_VERSION_PATCH "${VERSION_PATCH}")
SET(CPACK_PACKAGE_NAME "${CMAKE_PROJECT_NAME}")
SET(CPACK_GENERATOR "TGZ;ZIP")
if(${CMAKE_SYSTEM_NAME} STREQUAL "Windows")
SET(CPACK_GENERATOR "${CPACK_GENERATOR};NSIS")
endif()
SET(CPACK_SOURCE_GENERATOR "TGZ;ZIP")
SET(CPACK_IGNORE_FILES "/_CPack_Packages/;/CMakeFiles/;/build/;/CVS/;\\\\.zip$;\\\\.tar.gz$;\\\\.exe$;/\\\\.svn/;\\\\.swp$;\\\\.#;/#")
SET(CPACK_SOURCE_IGNORE_FILES "/_CPack_Packages/;/CMakeFiles/;/build/;/CVS/;\\\\.zip$;\\\\.tar.gz$;\\\\.exe$;/\\\\.svn/;\\\\.swp$;\\\\.#;/#")
SET(CPACK_TOPLEVEL_TAG "Packages")
SET(CPACK_PACKAGE_FILE_NAME "MessageBus-${CMAKE_SYSTEM_NAME}-${VERSION}")
SET(CPACK_SOURCE_PACKAGE_FILE_NAME "MessageBus-${VERSION}-src")

INCLUDE(CPack)

# We need C++11
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(CMAKE_INCLUDE_CURRENT_DIR ON)

add_subdirectory(src)

